Updated Stars code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Please contact reddit.com/u/lru for anything regarding this site
 
 All content belongs to respective owners
 
-SpaceX, SpaceX name, SpaceX logo, SpaceX starfield, and SpaceX Webcast are owned by Space Exploration Technologies Inc.
+SpaceX and SpaceX logo are owned by Space Exploration Technologies Inc.
 
 Background image modified from: https://www.flickr.com/photos/58782395@N03/5519580228/
 Licensed under: https://creativecommons.org/licenses/by/2.0/
@@ -25,8 +25,8 @@ Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/lic
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="css/html5reset.css" />
-    <link rel="icon" href="-favicon.png">
-    <!--[if IE]><link rel="shortcut icon" href="-favicon.ico"><![endif]-->
+    <link rel="icon" href="favicon.png">
+    <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/three.js"></script>
     <script src='js/THREEx.WindowResize.js'></script>
@@ -41,9 +41,9 @@ Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/lic
     <div class="horizontal glow">
       <div class="vertical">
         <!--img src="images/SpaceX_logo.svg" class="logo"-->
+        <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX and SpaceX logo are owned by Space Exploration Technologies Inc.</div>
       </div>
     </div>
-    <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX, SpaceX name, SpaceX logo, SpaceX starfield, and SpaceX Webcast are owned by Space Exploration Technologies Inc.</div>
   </div>
   </body>
 </html>
