--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/lic
   <head>
   <!--[if lte IE 8]>
     <script type="text/javascript">
+        // IE less than IE 9 does not support canvas
         window.location = "http://windows.microsoft.com/en-us/internet-explorer";
     </script>
   <![endif]-->
@@ -40,8 +41,7 @@ Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/lic
   <div id="content">
     <div class="horizontal glow">
       <div class="vertical">
-        <!--img src="images/SpaceX_logo.svg" class="logo"-->
-        <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX and SpaceX logo are owned by Space Exploration Technologies Inc.</div>
+        <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX name is owned by Space Exploration Technologies Inc.</div>
       </div>
     </div>
   </div>
