--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@ Licensed under: https://creativecommons.org/licenses/by/2.0/
 Stars based on tutorial at: https://github.com/sebleedelisle/Tutorials/tree/master/three
 Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/licence.txt
 
-SpaceX Webcast Music is owned by Space Exploration Technologies Inc.
+SpaceX Music is owned by Space Exploration Technologies Inc.
 SpaceX Webcast Music from November 28, 2013 is recorded by Megneous and is avaliable at: https://www.youtube.com/watch?v=Q7EL1nTnOI8
+SpaceX Webcast Music from November 28, 2013 is recorded by Megneous and is avaliable at: https://www.youtube.com/watch?v=Ggo7E0LyEJw
+Dragon V2 Unveiling is recorded by Megneous and is avaliable at: https://www.youtube.com/watch?v=MX76RyZulI8
+SpaceX Dragon V2 | Flight Animation is owned by SpaceX official YouTube channel   and is avaliable at: https://www.youtube.com/watch?v=Cf_-g3UWQ04
+SpaceX Music - Dragon Launch        is recorded by melrobRTF                      and is avaliable at: https://www.youtube.com/watch?v=0NKFtrlrOIs
+SpaceX Rocket Tank Production       is owned by SpaceX official YouTube channel   and is avaliable at: https://www.youtube.com/watch?v=vrR31nHCV-U
 -->
 <html>
   <head>
@@ -49,6 +54,7 @@ SpaceX Webcast Music from November 28, 2013 is recorded by Megneous and is avali
       </div>
     </div>
   </div>
-  <iframe width="1" height="1" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
+  <iframe id="youtube-iframe" width="1" height="1" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
+  <script src="js/youtube.js"></script>
   </body>
 </html>
