Added Mobile support. Added new music

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ SpaceX Music - Dragon Launch        was recorded by melrobRTF                   
 SpaceX Rocket Tank Production       was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=vrR31nHCV-U
 SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IBm9xpltdIo
 SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=Tccj8-rcQ08
+SpaceX Webcast Music 01.03.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=dGF8nTY-Bc4
 -->
 <html>
   <head>
@@ -56,7 +57,10 @@ SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                 
       </div>
     </div>
   </div>
-  <iframe id="youtube-iframe" width="1" height="1" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
+  <div id="media">
+    <iframe id="youtube-iframe" width="100" height="100" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
+    <div class="text">Tap SpaceX Logo to hide after playing</div>
+  </div>
   <script src="js/youtube.js"></script>
   </body>
 </html>
