--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ SpaceX Music - Dragon Launch        was recorded by melrobRTF                   
 SpaceX Rocket Tank Production       was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=vrR31nHCV-U
 SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IBm9xpltdIo
 SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=Tccj8-rcQ08
-SpaceX Webcast Music 01.03.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=dGF8nTY-Bc4
 -->
 <html>
   <head>
@@ -44,6 +43,7 @@ SpaceX Webcast Music 01.03.2015     was recorded by darkerstorm                 
     <script src='js/THREEx.WindowResize.js'></script>
     <script src="js/rAF.js" defer></script>
     <script src="js/stars.js" defer></script>
+    <script src="js/modernizr.autoplay.js" defer></script>
   </head>
   <body>
   <div class="bg">
@@ -59,7 +59,7 @@ SpaceX Webcast Music 01.03.2015     was recorded by darkerstorm                 
   </div>
   <div id="media">
     <iframe id="youtube-iframe" width="100" height="100" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
-    <div class="text">Tap SpaceX Logo to hide after playing</div>
+    <div class="text">Press SpaceX Logo to hide after playing</div>
   </div>
   <script src="js/youtube.js"></script>
   </body>
