Centered spacex logo, brighten background

--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@ Licensed under: https://creativecommons.org/licenses/by/2.0/
 Stars based on tutorial at: https://github.com/sebleedelisle/Tutorials/tree/master/three
 Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/licence.txt
 
-SpaceX Webcast Music 2013.11.28     was recorded by Megneous                                             Avaliable at: https://www.youtube.com/watch?v=Q7EL1nTnOI8 Flowing by Chill Purpose.
+SpaceX Webcast Music 2013.11.28     was recorded by Megneous                                             Avaliable at: https://www.youtube.com/watch?v=Q7EL1nTnOI8 
+    Flowing by Chill Purpose.
+    2m8s First Step By 5 seconds media.
     8m51s Subcultures by Chris Southward.
     11m22s Particles by Chris Southward.
     13m8s Grace VS Technique by Chris Southward.
     17m24s  'Louder' by 5 seconds media.
-    2m8s First Step By 5 seconds media.
 SpaceX Webcast Music 03.06.2014     was recorded by Rafal Pryczynicz                                     Avaliable at: https://www.youtube.com/watch?v=Ggo7E0LyEJw Orbital' By Thomas hogan
 Falcon 9 First Stage Return | ORBCOMM Mission  was recorded by SpaceX official YouTube channel           Avaliable at: https://www.youtube.com/watch?v=CQnR5fhCXkQ
 Dragon V2 Unveiling                 was recorded by Ergzay                                               Avaliable at: https://www.youtube.com/watch?v=MX76RyZulI8
 SpaceX Dragon V2 | Flight Animation was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=Cf_-g3UWQ04
 SpaceX Music - Dragon Launch        was recorded by melrobRTF                                            Avaliable at: https://www.youtube.com/watch?v=0NKFtrlrOIs Trip Wire - Aleksandar Dimitrijevic
 SpaceX Rocket Tank Production       was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=vrR31nHCV-U
-SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IBm9xpltdIo
+SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IBm9xpltdIo 
 SpaceX Webcast Music 10.01.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=Tccj8-rcQ08 Cascade by chill purpose
 SpaceX Webcast Music 01.03.2015     by Parker & Hanson - Gravity (Original Mix) by Anjunabeats           Avaliable at: https://www.youtube.com/watch?v=SOLOZRVNM8w Gravity (Original Mix) by Anjunabeats
-SpaceX Webcast Music 2015.04.14 + SpaceX Intro was recorded by Rafal Pryczynicz                          Avaliable at: https://www.youtube.com/watch?v=mA548WWMiLY
+SpaceX Webcast Music 2015.04.14 + SpaceX Intro was recorded by Rafal Pryczynicz                          Avaliable at: https://www.youtube.com/watch?v=mA548WWMiLY Particles by Chris Southward
 SpaceX Webcast Music 28.06.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=7uflq0d4rzg
 Crew Dragon | Interior              was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=xjSb_b4TtxI Drifting Clouds by Andrew Britton and David Goldsmith
 Falcon Heavy | Flight Animation     was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=4Ca6x4QbpoM
