Switched youtube link in comment to official link

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ SpaceX Webcast Music 2015.04.14 + SpaceX Intro was recorded by Rafal Pryczynicz 
 SpaceX Webcast Music 28.06.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=7uflq0d4rzg
 Crew Dragon | Interior              was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=xjSb_b4TtxI Drifting Clouds by Andrew Britton and David Goldsmith
 Falcon Heavy | Flight Animation     was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=4Ca6x4QbpoM
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IOUjcEtT5_w
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=yXAEAUN6Az8
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=d0X82bh42gQ
+SpaceX Webcast Music 21.12.2015     Samus by Test Shot Starfish                                          Avaliable at: https://soundcloud.com/testshotstarfish/samus
+SpaceX Webcast Music 21.12.2015     Ice Kid by Test Shot Starfish                                        Avaliable at: https://soundcloud.com/testshotstarfish/ice-kid
+SpaceX Webcast Music 21.12.2015     Flight by Test Shot Starfish                                         Avaliable at: https://soundcloud.com/testshotstarfish/flight
 -->
 <html>
   <head>
