Adding all artist and name

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@ Licensed under: https://creativecommons.org/licenses/by/2.0/
 Stars based on tutorial at: https://github.com/sebleedelisle/Tutorials/tree/master/three
 Licensed under: https://github.com/sebleedelisle/Tutorials/blob/master/three/licence.txt
 
+SpaceX CRS-1 Mission | October 2012 was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=V-zG5QvlBaw 
+    Firestorm eyes by Bold, Beautiful and Building
+	Warm embers by Bold, Beautiful and Building
+	Ignite the storm by Bold, Beautiful and Building
+
 SpaceX Webcast Music 2013.11.28     was recorded by Megneous                                             Avaliable at: https://www.youtube.com/watch?v=Q7EL1nTnOI8 
-    Flowing by Chill Purpose.
+    0s Flowing by Chill Purpose.
     2m8s First Step By 5 seconds media.
     8m51s Subcultures by Chris Southward.
     11m22s Particles by Chris Southward.
@@ -29,6 +34,7 @@ Falcon 9 First Stage Return | ORBCOMM Mission  was recorded by SpaceX official Y
 Dragon V2 Unveiling                 was recorded by Ergzay                                               Avaliable at: https://www.youtube.com/watch?v=MX76RyZulI8
 
 SpaceX Dragon V2 | Flight Animation was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=Cf_-g3UWQ04
+    Now The Time Is Here by Toni Halliday                                                                Avaliable at: https://www.youtube.com/watch?v=UdOqnVElZ00
 
 SpaceX Music - Dragon Launch        was recorded by melrobRTF                                            Avaliable at: https://www.youtube.com/watch?v=0NKFtrlrOIs
     Trip Wire by Aleksandar Dimitrijevic
@@ -44,25 +50,28 @@ SpaceX Webcast Music 01.03.2015                                                 
     Parker & Hanson - Gravity (Original Mix) by Anjunabeats
 
 SpaceX Webcast Music 2015.04.14 + SpaceX Intro was recorded by Rafal Pryczynicz                          Avaliable at: https://www.youtube.com/watch?v=mA548WWMiLY
-    Particles by Chris Southward
-	Subcultures by Chris Southward
-	Trip Wire by Aleksandar Dimitrijevic
+    0s Particles by Chris Southward
+	2m5s Subcultures by Chris Southward
 
 SpaceX Webcast Music 28.06.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=7uflq0d4rzg
 
 Crew Dragon | Interior              was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=xjSb_b4TtxI
-    Drifting Clouds by Andrew Britton and David Goldsmith
+    Drifting Clouds by Andrew Britton and David Goldsmith                                                Avaliable at: http://www.deezer.com/album/11445392
+
+Crew Dragon | In Orbit              was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=a1EB5BQpm7w
+    Solar Flares by Andrew Britton and David Goldsmith                                                   Avaliable at: http://www.deezer.com/album/11445392
 
 Falcon Heavy | Flight Animation     was recorded by SpaceX official YouTube channel                      Avaliable at: https://www.youtube.com/watch?v=4Ca6x4QbpoM
+    The Real Deal by Michael Holborn                                                                     Avaliable at: https://www.youtube.com/watch?v=3xrPQQDE0sg
 
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://soundcloud.com/testshotstarfish/samus
-    Samus by Test Shot Starfish
+SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=IOUjcEtT5_w
+    Samus by Test Shot Starfish                                                                          Avaliable at: https://soundcloud.com/testshotstarfish/samus
 
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://soundcloud.com/testshotstarfish/ice-kid
-    Ice Kid by Test Shot Starfish
+SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=d0X82bh42gQ
+    Flight by Test Shot Starfish                                                                         Avaliable at: https://soundcloud.com/testshotstarfish/flight
 
-SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://soundcloud.com/testshotstarfish/flight
-    Flight by Test Shot Starfish
+SpaceX Webcast Music 21.12.2015     was recorded by darkerstorm                                          Avaliable at: https://www.youtube.com/watch?v=yXAEAUN6Az8
+    Ice Kid by Test Shot Starfish                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/ice-kid
 
 SpaceX - Webcast Music 15.06.2016   was recorded by Ratatosk                                             Avaliable at: https://www.youtube.com/watch?v=zLbUTy0K97c
     0s Unknown A
@@ -76,6 +85,20 @@ Making Humans a Multiplanetary Species   was recorded by SpaceX official YouTube
 	4m23s Unknown A
 	9m21s Flight by Test Shot Starfish                                                                   Avaliable at: https://soundcloud.com/testshotstarfish/flight
 	13m50s Forwared Nostalgic by Test Shot Starfish                                                      Avaliable at: https://soundcloud.com/testshotstarfish/forward-nostalgic
+
+High Speed Footage | Past Missions       was recorded by SpaceX official YouTube channel                 Avaliable at: https://www.youtube.com/watch?v=DKqY8sy3nkM
+    Electronic Fields by Epic Electronica                                                                Avaliable at: http://www.deezer.com/album/11445392
+
+This is SpaceX                           was recorded by SpaceX official YouTube channel                 Avaliable at: https://www.youtube.com/watch?v=ujX6CuRELFE
+    Firestorm eyes by Bold, Beautiful and Building                                                       Avaliable at: http://www.deezer.com/album/14884149
+
+"The Falcon has landed" | Recap of Falcon 9 launch and landing was recorded by SpaceX                    Avaliable at: https://www.youtube.com/watch?v=ANv5UfZsvZQ
+	Absolution Calling by Incubus                                                                        Avaliable at: https://www.youtube.com/watch?v=WTuAMlR3WuM
+
+Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube channel                 Avaliable at: https://www.youtube.com/watch?v=tTmbSur4fcs
+    0s Return To Flight by Test Shot Starfish                                                            Avaliable at: https://soundcloud.com/testshotstarfish/return-to-flight
+	4m32s Fly By by Test Shot Starfish                                                                   Avaliable at: https://soundcloud.com/testshotstarfish/fly-by
+
 -->
 <html>
   <head>
