Added track information overlay

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@ Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube
         <img src="images/SpaceX_logo.svg" class="logo">
         <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX, and SpaceX logo are owned by Space Exploration Technologies Inc. Webcast Music are owned by the respective parties.</div>
       </div>
+	  <div id="track-info">
+		<div>Artist: <span id="artist">Unknown</span></div>
+		<div id="name">Unknown</div>
+	  </div>
     </div>
   </div>
   <div id="media">
